# DimOS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  all.sh  build.sh  clean.sh  compile_commands.json  config.sh  iso.sh  limine.cfg  qemu.sh  target-triplet-to-arch.sh  x86_64-elf-toolchain.cmake
kernel/: CMakeLists.txt  Makefile
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: boot.S  common.S  descriptor_tables.c  descriptor_tables.cpp  descriptor_tables.h  gdt.S  interrupt.S  linker.ld  make.config  paging.S  paging.c  paging.h  paging_low.S  tty.c  vga.h
kernel/arch/x86_64/: boot.S  common.S  crti.S  crtn.S  descriptor_tables.cpp  descriptor_tables.h  gdt.S  interrupt.S  kthread.S  linker.ld  make.config  paging.S  tty.cpp
kernel/include/demo/: binaries.hpp  common.hpp  demo.h  terminal.hpp
kernel/include/kernel/: common.h  cpu.h  debug.h  isr.h  kheap.h  limine.h  multiboot.h  timer.h  tty.h  x64.h
kernel/include/kernel/concurrency/: locks.hpp  primitives.h
kernel/include/kernel/cpp/: allocator.hpp  bitset.hpp  concepts.hpp  iterator.hpp  string.hpp  type-traits.hpp  unique-ptr.hpp  utility.hpp  vector.hpp
kernel/include/kernel/demo/: demo.h
kernel/include/kernel/devices/: framebuffer.h  keyboard.h  pic.h  pit.h
kernel/include/kernel/filesystem/: fs.h  ramdisk.h  resource.h  vfs.h
kernel/include/kernel/gfx/: fb.hpp
kernel/include/kernel/memory/: heap.h  kheap.h  paging.h  pmm.h  vmm.h
kernel/include/kernel/process/: kthread.h  scheduler.h
kernel/kernel/: common.c  common.cpp  debug.cpp  isr.c  isr.cpp  kernel.c  kernel.cpp  kheap.c  supcpp.cpp  timer.cpp
kernel/kernel/concurrency/: primitives.cpp
kernel/kernel/cpp/: common.cpp  memory.cpp
kernel/kernel/demo/: demo.c  demo.cpp
kernel/kernel/devices/: framebuffer.cpp  keyboard.cpp  pic.cpp  pit.cpp
kernel/kernel/filesystem/: ramdisk.cpp  vfs.cpp
kernel/kernel/gfx/: fb.cpp
kernel/kernel/memory/: heap.cpp  kheap.cpp  pmm.cpp  vmm.cpp
kernel/kernel/process/: kthread.cpp
libc/: CMakeLists.txt  Makefile
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/libssp/: ssp.c
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c  free.c  malloc.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcpy.c
